# mini_projects

./: .gitignore  CMakeLists.txt  Display.cpp  LED.cpp  LED.h  OneShot.cpp  OneShot.h  SFMLClockApp.cpp  SFMLClockApp.h  Scheduler.cpp  Scheduler.h  Sensor.cpp  Sensor.h  Task.h  TerminalClockApp.cpp  Time.cpp  Time.h  app.cpp
7SegmentsClock/: CMakeLists.txt  ClockApp.h  Display.h  Encoding.cpp  Encoding.h  TerminalClockApp.h
basicScheduler/: CMakeLists.txt  Comm.cpp  Comm.h  LED.h  Scheduler.cpp  Sensor.cpp  Task.h  app.cpp
hangman/: CMakeLists.txt  hangman.cpp  hangman.h  main.cpp  words.json
robotFSM/: CMakeLists.txt  IState.h  general_notes.txt
